--- a/app/Resources/views/site/_partials/_flash_messages.html.twig
+++ b/app/Resources/views/site/_partials/_flash_messages.html.twig
@@ -11,16 +11,17 @@
 {% if app.request.hasPreviousSession %}
     {% for type, messages in app.session.flashbag.all() %}
         {% for message in messages %}
-            <div class="{{ type }}" role="alert">
+            {% if type == 'danger' %}
+                {% set type = 'error' %}
+            {% endif %}
+            <div class="{{ type }}">
                 <div class="message-box-wrap">
-                    <strong>
-                        {% if type == 'success' %}
-                            <span class="glyphicon glyphicon-ok"></span>
-                        {% elseif type == 'danger' %}
-                            <span class="glyphicon glyphicon-exclamation-sign"></span>
-                        {% endif %}
-                        {{ message }}
-                    </strong>
+                    {% if type == 'success' %}
+                        <span class="glyphicon glyphicon-ok"></span>
+                    {% elseif type == 'danger' %}
+                        <span class="glyphicon glyphicon-exclamation-sign"></span>
+                    {% endif %}
+                    {{ message }}
                 </div>
             </div>
         {% endfor %}
