--- a/app/Resources/views/site/security/login.html.twig
+++ b/app/Resources/views/site/security/login.html.twig
@@ -53,7 +53,7 @@
                                     {{ form_widget(form._password) }}
                                 </label>
                                 <div class="note">
-                                    <a href="#sky-form2" class="modal-opener">
+                                    <a href="{{ path('site_resetting_request') }}">
                                         {{ 'user.login.links.forgot_password'|trans }}
                                     </a>
                                 </div>
@@ -72,6 +72,7 @@
                         </div>
                     </section>
                 </fieldset>
+
                 <footer>
                     <div class="fright">
                         <button type="submit" class="button">Log in</button>
