--- a/app/Resources/views/site/account/dashboard.html.twig
+++ b/app/Resources/views/site/account/dashboard.html.twig
@@ -1,8 +1,10 @@
 {% extends 'site/base.html.twig' %}
 
-{% block body %}
+{% block main_container %}
 
-    {% include '_partials/_flash_messages.html.twig' %}
+    {% include('site/_partials/_client_page_title.html.twig') %}>
 
-    <h3>Site Account Dashboard</h3>
+    <div class="clearfix"></div>
+
+
 {% endblock %}
