--- a/app/Resources/views/site/account/resetting/resettingRequest.html.twig
+++ b/app/Resources/views/site/account/resetting/resettingRequest.html.twig
@@ -2,11 +2,7 @@
 
 {% block main_container %}
 
-    <div class="page_title2">
-        <div class="container">
-            <div class="title"><h1>Área do Cliente</h1><br></div>
-        </div>
-    </div><!-- end page title -->
+    {% include('site/_partials/_client_page_title.html.twig') %}
 
     <div class="clearfix"></div>
 
