--- a/app/Resources/views/site/_partials/_block_stylesheets.html.twig
+++ b/app/Resources/views/site/_partials/_block_stylesheets.html.twig
@@ -19,7 +19,7 @@
 <link href="{{ asset('site/assets/js/mainmenu/demo.css') }}" rel="stylesheet">
 <link href="{{ asset('site/assets/js/mainmenu/menu.css') }}" rel="stylesheet">
 
-<link rel="stylesheet" href="{{ asset('site/assets/css/colors/blue.css') }}" />
+{#<link rel="stylesheet" href="{{ asset('site/assets/css/colors/blue.css') }}" />#}
 
 <!-- slide panel -->
 <link rel="stylesheet" type="text/css" href="{{ asset('site/assets/js/slidepanel/slidepanel.css') }}">
@@ -55,3 +55,5 @@
 
 <!-- forms -->
 <link rel="stylesheet" href="{{ asset('site/assets/js/form/sky-forms.css') }}" type="text/css" media="all">
+
+<link rel="stylesheet" href="{{ asset('site/assets/css/colors/blue.css') }}" />
