--- a/app/Resources/views/site/produtos/index2.html.twig
+++ b/app/Resources/views/site/produtos/index2.html.twig
@@ -151,7 +151,7 @@
                                 <a href="{{ asset('site/assets/images/screen_clientes_pc.png') }}" class="fancybox"
                                    rel="gallery1" title="Clientes">
                                     <img src="{{ asset('site/assets/images/screen_clientes_pc.png') }}" alt=""
-                                         width="530"/>
+                                         />
                                 </a>
                             </div>
                         </li>
@@ -161,7 +161,7 @@
                                 <a href="{{ asset('site/assets/images/screen_contasareceber_pc.png') }}"
                                    class="fancybox" rel="gallery1" title="Contas a Receber">
                                     <img src="{{ asset('site/assets/images/screen_contasareceber_pc.png') }}" alt=""
-                                         width="530"/>
+                                         />
                                 </a>
                             </div>
                             <div class="one_half last">
@@ -191,7 +191,7 @@
                                 <a href="{{ asset('site/assets/images/screen_controledeacessodeusuario_pc.png') }}"
                                    class="fancybox" rel="gallery1" title="Controle de Acesso de Usuários">
                                     <img src="{{ asset('site/assets/images/screen_controledeacessodeusuario_pc.png') }}"
-                                         alt="" width="530"/>
+                                         alt="" />
                                 </a>
                             </div>
                         </li>
@@ -201,7 +201,7 @@
                                 <a href="{{ asset('site/assets/images/screen_entradadenota_pc.png') }}"
                                    class="fancybox" rel="gallery1" title="Entrada de Nota">
                                     <img src="{{ asset('site/assets/images/screen_entradadenota_pc.png') }}"
-                                         alt="" width="530"/>
+                                         alt="" />
                                 </a>
                             </div>
                             <div class="one_half last">
@@ -231,7 +231,7 @@
                                 <a href="{{ asset('site/assets/images/screen_notaeletronica_pc.png') }}"
                                    class="fancybox" rel="gallery1" title="Nota Eletrônica">
                                     <img src="{{ asset('site/assets/images/screen_notaeletronica_pc.png') }}"
-                                         alt="" width="530"/>
+                                         alt="" />
                                 </a>
                             </div>
                         </li>
@@ -241,7 +241,7 @@
                                 <a href="{{ asset('site/assets/images/screen_produtos_pc.png') }}"
                                    class="fancybox" rel="gallery1" title="Produtos">
                                     <img src="{{ asset('site/assets/images/screen_produtos_pc.png') }}"
-                                         alt="" width="530"/>
+                                         alt="" />
                                 </a>
                             </div>
                             <div class="one_half last">
@@ -271,7 +271,7 @@
                                 <a href="{{ asset('site/assets/images/screen_venda_pc.png') }}"
                                    class="fancybox" rel="gallery1" title="Relatório de Vendas">
                                     <img src="{{ asset('site/assets/images/screen_venda_pc.png') }}"
-                                         alt="" width="530"/>
+                                         alt="" />
                                 </a>
                             </div>
                         </li>
@@ -281,7 +281,7 @@
                                 <a href="{{ asset('site/assets/images/screen_sintegra_pc.png') }}"
                                    class="fancybox" rel="gallery1" title="Sintegra">
                                     <img src="{{ asset('site/assets/images/screen_sintegra_pc.png') }}"
-                                         alt="" width="530"/>
+                                         alt="" />
                                 </a>
                             </div>
                             <div class="one_half last">
@@ -311,7 +311,7 @@
                                 <a href="{{ asset('site/assets/images/screen_venda_pc.png') }}"
                                    class="fancybox" rel="gallery1" title="Venda">
                                     <img src="{{ asset('site/assets/images/screen_venda_pc.png') }}"
-                                         alt="" width="530"/>
+                                         alt="" />
                                 </a>
                             </div>
                         </li>
