--- a/app/Resources/views/site/_partials/_header.html.twig
+++ b/app/Resources/views/site/_partials/_header.html.twig
@@ -16,8 +16,17 @@
                                 </a>
                             </li>
                             <li class="link">
-
+                                <a class="" href="{{ path('site_portal') }}">
+                                    <i class="fa fa-user"></i> Acesso do Cliente
+                                </a>
                             </li>
+                            {% if app.user %}
+                                <li class="link">
+                                    <a href="#">
+                                        <i class="fa fa-user-o"></i> Bem vindo, {{ app.user.customer.name }}
+                                    </a>
+                                </li>
+                            {% endif %}
                             <li class="social"><a href="#"><i class="fa fa-facebook"></i></a></li>
                         </ul>
 
@@ -64,7 +73,8 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="{% if app.request.attributes.get('_route') == 'site_experimente' %}active{% endif %}">
+                                        <a href="#"
+                                           class="{% if app.request.attributes.get('_route') == 'site_experimente' %}active{% endif %}">
                                             Experimente
                                         </a>
                                     </li>
