--- a/app/Resources/views/site/portal/changePassword/changePassword.html.twig
+++ b/app/Resources/views/site/portal/changePassword/changePassword.html.twig
@@ -1,35 +1,72 @@
-{% extends 'site/base.html.twig' %}
+{% extends 'site/portal/base.html.twig' %}
 
-{% block body %}
+{% block content_right %}
 
-    <div class="panel panel-default">
+    <div class="one_full">
 
-    <div class="panel-heading">
-        <h2><i class="glyphicon glyphicon-list-alt"></i> {{ 'user.change_password.title'|trans }}</h2>
-    </div>
+        <h3>{{ 'user.change_password.title'|trans }}</h3>
 
-    <div class="panel-body">
-
-        {{ include('_partials/_flash_messages.html.twig') }}
-
-        {{ form_start(form, { 'action': path('site_change_password'), 'attr': {'novalidate': 'novalidate'} }) }}
-
+        {{ include('site/_partials/_flash_messages.html.twig') }}
         {{ form_errors(form) }}
 
-        {{ form_row(form.current_password) }}
-        {{ form_row(form.plainPassword.first) }}
-        {{ form_row(form.plainPassword.second) }}
+        {{ form_start(form, { 'action': path('site_change_password'), 'attr': {
+            'class': 'sky-form',
+            'id': 'sky-form4'
+        } }) }}
 
-        <div class="row">
-            <div class="col-md-12">
-                <button class="btn btn-primary">{{ 'user.change_password.btns.submit'|trans }}</button>
-            </div>
-        </div>
+        <fieldset>
+            <section>
+                {{ form_label(form.current_password, null, {
+                    'label_attr': {'class': 'label'}
+                }) }}
+                <label class="input">
+                    <i class="icon-append icon-lock"></i>
+                    {{ form_widget(form.current_password) }}
+                </label>
+                {{ form_errors(form.current_password) }}
+            </section>
+            <section>
+                {{ form_label(form.plainPassword.first, null, {
+                    'label_attr': {'class': 'label'}
+                }) }}
+                <label class="input">
+                    <i class="icon-append icon-lock"></i>
+                    {{ form_widget(form.plainPassword.first) }}
+                </label>
+                {{ form_errors(form.plainPassword.first) }}
+            </section>
+            <section>
+                {{ form_label(form.plainPassword.second, null, {
+                    'label_attr': {'class': 'label'}
+                }) }}
+                <label class="input">
+                    <i class="icon-append icon-lock"></i>
+                    {{ form_widget(form.plainPassword.second) }}
+                </label>
+                {{ form_errors(form.plainPassword.second) }}
+            </section>
+        </fieldset>
+
+        <footer>
+            <button type="submit" name="submit" class="button">
+                {{ 'user.change_password.btns.submit'|trans }}
+            </button>
+        </footer>
 
         {{ form_widget(form._token) }}
 
         {{ form_end(form, {'render_rest': false}) }}
 
     </div>
+
+    <div class="clearfix margin_top7"></div>
+
+{% endblock %}
+
+{% block javascripts %}
+
+    {{ parent() }}
+
+    <script src="{{ asset('site/assets/js/_validation/login.js') }}"></script>
 
 {% endblock %}
