--- a/app/Resources/views/admin/boleto/_boleto.html.twig
+++ b/app/Resources/views/admin/boleto/_boleto.html.twig
@@ -149,7 +149,7 @@
     <br>
 
     <!-- Ficha de compensação -->
-    {% include('@view_boleto/partials/ficha-compensacao.html.twig') %}
+    {% include('admin/boleto/_ficha-compensacao.html.twig') %}
 </div>
 {% if imprimir_carregamento is defined and imprimir_carregamento == true %}
     <script type="text/javascript">
