--- a/app/Resources/views/admin/base.html.twig
+++ b/app/Resources/views/admin/base.html.twig
@@ -10,6 +10,8 @@
     <meta charset="UTF-8"/>
     <title>{% block title %}Admin RC Info{% endblock %}</title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     {% block stylesheets %}
         {% embed 'admin/_partials/_block_stylesheets.html.twig' %}{% endembed %}
     {% endblock %}
