--- a/app/Resources/views/admin/customer/collection/_customerAddress.html.twig
+++ b/app/Resources/views/admin/customer/collection/_customerAddress.html.twig
@@ -17,7 +17,7 @@
                 'data-off-color': 'danger',
                 'data-on-text': 'resource.is_enabled'|trans,
                 'data-off-text': 'resource.is_not_enabled'|trans,
-                'checked': true
+                'checked': false
             }})|e('html_attr') }}</div>
     </div>
 {% endif %}
@@ -43,7 +43,6 @@
                         'data-off-color': 'danger',
                         'data-on-text': 'resource.is_enabled'|trans,
                         'data-off-text': 'resource.is_not_enabled'|trans,
-                        'checked': true
                     }}) }}</div>
             </div>
         </div>
