--- a/app/Resources/views/admin/customer/edit.html.twig
+++ b/app/Resources/views/admin/customer/edit.html.twig
@@ -6,7 +6,7 @@
 
         {% block form_start %}
             {{ form_start(form, {'action': path('admin_customer_edit', {id : customer.id}) ~ pagination.buildQuery,
-                'attr' : {'class' : '_form-horizontal'}}) }}
+                'attr' : {'class' : '_form-horizontal', 'novalidate': true}}) }}
         {% endblock %}
 
         {% block icon_list %}
@@ -22,6 +22,9 @@
         {% block nav_tabs %}
             <li role="presentation" class="active">
                 <a href="#geral" aria-controls="geral" role="tab" data-toggle="tab">Geral</a>
+            </li>
+            <li role="presentation">
+                <a href="#addresses" aria-controls="addresses" role="tab" data-toggle="tab">Endereço</a>
             </li>
         {% endblock %}
 
@@ -44,8 +47,36 @@
                     </div>
                 </div>
             </div>
+            <div role="tabpanel" class="tab-pane" id="addresses">
+                <div id="customerAddress"
+                     data-prototype="{% include 'admin/customer/collection/_customerAddress.html.twig'
+                     with {'item': form.customerAddresses, 'prototype': true} %}">
+                    {% for customerAddress in form.customerAddresses %}
+                        {% include 'admin/customer/collection/_customerAddress.html.twig'
+                        with {'item' : customerAddress, 'collection': true } %}
+                    {% endfor %}
+
+                    <div id="panel_add_customerAddress">
+                        <a href="#" class="btn btn-default col-xs-12" id="btn_add_customerAddress">
+                            <span class="fa fa-plus"></span>
+                            {{ 'admin.customerAddresses.new'|trans }}
+                        </a>
+                        <div class="clearfix"></div>
+                    </div>
+
+                </div>
+            </div>
         {% endblock %}
 
     {% endembed %}
 
+{% endblock %}
+
+{% block javascripts %}
+    {% embed 'admin/_partials/_block_javascripts.html.twig' %}
+        {% block page_level_scripts %}
+            <script src="{{ asset('bower_components/jquery.inputmask/dist/jquery.inputmask.bundle.js') }}"></script>
+            <script src="{{ asset('admin/assets/global/scripts/customerAddressesCollection.js') }}"></script>
+        {% endblock %}
+    {% endembed %}
 {% endblock %}
