--- a/app/Resources/views/admin/_partials/_block_javascripts.html.twig
+++ b/app/Resources/views/admin/_partials/_block_javascripts.html.twig
@@ -35,3 +35,4 @@
 
 <script src="{{ asset('admin/assets/global/scripts/custom.js') }}" type="text/javascript"></script>
 <script src="{{ asset('admin/assets/global/scripts/fields_format.js') }}" type="text/javascript"></script>
+<script src="{{ asset('admin/assets/global/scripts/form-input-mask.js') }}"></script>
