--- a/app/Resources/views/admin/customer/collection/_customerAddress.html.twig
+++ b/app/Resources/views/admin/customer/collection/_customerAddress.html.twig
@@ -5,7 +5,7 @@
     </div>
     <div class='row'>
         <div class='col-md-6'>{{ form_row(item.vars.prototype.city)|e('html_attr') }}</div>
-        <div class='col-md-6'>{{ form_row(item.vars.prototype.postcode)|e('html_attr') }}</div>
+        <div class='col-md-6'>{{ form_row(item.vars.prototype.zipCode)|e('html_attr') }}</div>
     </div>
     <div class='row'>
         <div class='col-md-6'>{{ form_row(item.vars.prototype.uf)|e('html_attr') }}</div>
@@ -31,7 +31,7 @@
             </div>
             <div class='row'>
                 <div class='col-md-6'>{{ form_row(item.city) }}</div>
-                <div class='col-md-6'>{{ form_row(item.postcode) }}</div>
+                <div class='col-md-6'>{{ form_row(item.zipCode) }}</div>
             </div>
             <div class='row'>
                 <div class='col-md-6'>{{ form_row(item.uf) }}</div>
