--- a/app/Resources/views/admin/bill/edit.html.twig
+++ b/app/Resources/views/admin/bill/edit.html.twig
@@ -39,10 +39,14 @@
         {% block tab_pane %}
             <div role="tabpanel" class="tab-pane active" id="geral">
                 <div class="row">
-                    <div class="col-md-6">{{ form_row(form.customerChoices.customer) }}</div>
+                    {% if not bill.billRemessa.sent %}
+                        <div class="col-md-6">{{ form_row(form.customerChoices.customer) }}</div>
+                    {% endif %}
                     <div class="col-md-6">{{ form_row(form.description) }}</div>
-                    <div class="col-md-6">{{ form_row(form.dueDateAt) }}</div>
-                    <div class="col-md-6">{{ form_row(form.amount) }}</div>
+                    {% if not bill.billRemessa.sent %}
+                        <div class="col-md-6">{{ form_row(form.dueDateAt) }}</div>
+                        <div class="col-md-6">{{ form_row(form.amount) }}</div>
+                    {% endif %}
                     <div class="col-md-6">{{ form_row(form.paymentDateAt) }}</div>
                     <div class="col-md-6">{{ form_row(form.amountPaid) }}</div>
                     <div class="col-md-12">{{ form_row(form.note, {'attr': {'rows' : 5}}) }}</div>
