--- a/app/Resources/views/admin/bill/index.html.twig
+++ b/app/Resources/views/admin/bill/index.html.twig
@@ -121,7 +121,7 @@
                         {{ 'admin.bill.fields.updatedAt'|trans }}
                     </a>
                 </th>
-                <th>Ações</th>
+                <th style="width: 13%">Ações</th>
             </tr>
         {% endblock %}
 
