--- a/app/Resources/views/admin/_partials/_sidebar.html.twig
+++ b/app/Resources/views/admin/_partials/_sidebar.html.twig
@@ -44,6 +44,18 @@
                 </ul>
             </li>
             <li class="nav-item
+                {% if 'admin_company' in app.request.attributes.get('_route') %}active{% endif %}">
+                <a href="{{ path('admin_company_index') }}" class="nav-link nav-toggle">
+                    <i class="icon-organization"></i>
+                    <span class="title">{{ 'admin.company.title'|trans }}</span>
+                    {% if 'admin_company' in app.request.attributes.get('_route') %}
+                        <span class="selected"></span>
+                    {% endif %}
+                    <span class="arrow
+                    {% if 'admin_company' in app.request.attributes.get('_route') %}open{% endif %}"></span>
+                </a>
+            </li>
+            <li class="nav-item
             {% if 'admin_customer' in app.request.attributes.get('_route') %}active{% endif %}">
                 <a href="{{ path('admin_customer_index') }}" class="nav-link">
                     <i class="icon-globe"></i>
