--- a/app/Resources/views/site/contato/index2.html.twig
+++ b/app/Resources/views/site/contato/index2.html.twig
@@ -79,7 +79,7 @@
                     Telefone: 27 3349-9130<br/>
                     Whatsapp: 27 99824-9330<br/>
                     E-mail: <a
-                            href="mailto:atendimento@rcinformatica.net.br">atendimento@rcinformatica.net.br</a>
+                            href="mailto:atendimento1@rcinformatica.net.br">atendimento1@rcinformatica.net.br</a>
                 </li>
             </ul>
 
