--- a/app/Resources/views/admin/bill/index.html.twig
+++ b/app/Resources/views/admin/bill/index.html.twig
@@ -24,6 +24,9 @@
         {% endblock %}
 
         {% block actions %}
+            <a href="javascript:;" data-toggle="modal" data-target="#modalMonthlyInvoice" class="btn green">
+                <i class="fa fa-plus"></i> {{ 'admin.bill.monthly_invoice'|trans }}
+            </a>
             <a href="{{ path('admin_bill_new') ~ pagination.buildQuery }}" class="btn green">
                 <i class="fa fa-plus"></i> {{ 'admin.bill.new'|trans }}
             </a>
@@ -167,7 +170,8 @@
                             {% endblock %}
                             {% block li_actions %}
                                 <li>
-                                    <a href="{{ path('admin_bill_boleto', {id: bill.id}) ~ '?inline=1' }}" target="_blank">
+                                    <a href="{{ path('admin_bill_boleto', {id: bill.id}) ~ '?inline=1' }}"
+                                       target="_blank">
                                         <i class="fa fa-search"></i> Visualizar Boleto
                                     </a>
                                 </li>
@@ -206,6 +210,50 @@
         {% endblock %}
 
     {% endembed %}
+
+    <!-- Modal -->
+    <div class="modal fade" id="modalMonthlyInvoice" tabindex="-1" role="basic" aria-labelledby="modalMonthlyInvoice">
+        <div class="modal-dialog" role="document">
+            {{ form_start(billMonthlyInvoice, {'action': path('admin_bill_monthly_invoice')}) }}
+            <div class="modal-content">
+
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="modalMonthlyInvoiceLabel">{{ 'admin.bill.monthly_invoice'|trans }}</h4>
+                </div>
+
+                <div class="modal-body">
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            {{ form_label(billMonthlyInvoice.date.month, 'Mês') }}
+                            {{ form_widget(billMonthlyInvoice.date.month) }}
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-md-12">
+                            {{ form_label(billMonthlyInvoice.date.year, 'Ano') }}
+                            {{ form_widget(billMonthlyInvoice.date.year) }}
+                        </div>
+                        {{ form_widget(billMonthlyInvoice.date.day, {'attr': {'class':'hide'}}) }}
+                    </div>
+
+                    <br>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn red btn-outline" data-dismiss="modal">
+                        <i class="fa fa-remove"></i> Cancelar
+                    </button>
+                    <button type="submit" class="btn green btn-outline"><i class="fa fa-check"></i> Gerar</button>
+                </div>
+            </div>
+            {{ form_end(billMonthlyInvoice) }}
+        </div>
+    </div>
+    <!-- End Modal -->
 
 {% endblock %}
 
